--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "keepix-wallets-evm",
-  "version": "0.0.4",
+  "name": "@keepix/wallets-evm",
+  "version": "0.0.5",
   "description": "Wallets EVM library",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Keepix-labs/keepix-wallets-evm.git"
+  },
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs && npm run types",
     "test": "jest",
     "test-gui": "npx majestic",
-    "types": "tsc --declaration --emitDeclarationOnly"
+    "types": "tsc --declaration --emitDeclarationOnly",
+    "deploy": "npm publish --access public"
   },
   "author": "jguyet@keepix.io",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-typescript": "^11.1.3",
     "@types/debug": "^4.1.7",
     "@types/jest": "^29.0.3",
-    "@types/lodash-es": "^4.17.4",
     "@types/node": "^20.5.7",
     "debug": "^4.3.2",
     "jest": "^29.0.3",
@@ -34,7 +38,13 @@
   "dependencies": {
     "@ethersproject/hdnode": "^5.7.0",
     "crypto": "^1.0.1",
-    "ethers": "^5.1.4",
-    "lodash": "^4.17.21"
-  }
+    "ethers": "^5.1.4"
+  },
+  "keywords": [
+    "evm",
+    "wallets",
+    "ethereum",
+    "polygon",
+    "bsc"
+  ]
 }
