--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keepix/wallets-evm",
-  "version": "0.0.5",
+  "version": "0.0.10",
   "description": "Wallets EVM library",
   "private": false,
   "main": "dist/index.js",
@@ -37,8 +37,8 @@
   },
   "dependencies": {
     "@ethersproject/hdnode": "^5.7.0",
-    "crypto": "^1.0.1",
-    "ethers": "^5.1.4"
+    "ethers": "^5.1.4",
+    "js-sha256": "^0.11.0"
   },
   "keywords": [
     "evm",
